# misc

./: .gitignore  8queens.hs  Poly.hs  README.md  VerilogUtil.hs  ZXY.hs  ai-cli  andy.py  anna.py  ass_gen.py  bandcamp.py  chatgpt.py  claude-notify.py  claude-statusline-command.sh  csv2xlsx.py  dos2.py  extract_zip.sh  flash_my_board.sh  folder_view.py  frog  gofile_download.py  gpu-vfio  ieeexplore.hs  jsonFormatter.hs  learn_english.py  notify  patch_img.py  puzzle.hs  run_nvim.fish  rust-analyzer.fake  save_img.sh  scmd  sgf_parser.py  shell_upgrade.sh  ss.py  stellaris.py  strip_space  systemd_time.py  tap  tiger-search.py  (+4 more)
baidupan/: .gitignore  main.py  pan.py
bilibili/: live_record_webhook.py
claude/: CLAUDE.md  claude-notify.py  settings.json
geely/: .gitignore  geely.py  links.py  manual.json  merger.py
hhttp/: README.md  bulma.min.css  hhttp.cabal  hhttp.hs  stack.yaml
m3u8_tool/: m3u8.py  mk_from_url.sh  parse_m3u8.py
rhttp/: Cargo.toml
rhttp/files/: listing.html  style.css  upload.html
rhttp/src/: basic_auth.rs  cli.rs  main.rs  server.rs
ss/: .gitignore  cvm.tf  i.py  install_certbot.sh  post-install.py  ss.py
swc-unminify/: Cargo.toml
swc-unminify/src/: main.rs
yugioh/: asdf.sh  cardsearch.py  convert.py  gen_solo.py  mk_ygopro-1.sh  mk_ygopro-2.sh  mk_ygopro-3.py  mk_ygopro.sh  mkvid.py  search_usage.py  select_cards.py  selfbot.py
