[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }
