[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
axum-macros = "0.4.1"
# axum-macros = "0.4.0"
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
minijinja = "1.0.10"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["trace", "fs", "cors"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
