[package]
name = "swc-unminify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sourcemap = "6.0.1"
swc_common = { version = "0.14.7", features = ["tty-emitter"] }
swc_ecma_codegen = "0.80.0"
swc_ecma_parser = "0.78.10"
